--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 Flask==0.10.1
+Flask-Migrate==1.3.0
 Flask-RESTful==0.3.1
+Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
+SQLAlchemy==0.9.8
 Werkzeug==0.9.6
+alembic==0.7.3
 aniso8601==0.92
 itsdangerous==0.24
+psycopg2==2.5.4
 pytz==2014.10
 six==1.8.0
 wsgiref==0.1.2
